[package]
name = "miasma"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-compression = { version = "0.4.41", features = ["gzip"] }
async-stream = "0.3.6"
axum = "0.8.8"
bytes = "1.11.1"
clap = { version = "4.6.0", features = ["derive"] }
futures = "0.3.32"
reqwest = { version = "0.13.2", features = ["gzip", "stream"] }
tokio = { version="1.50.0", features= ["full"] }
tokio-util = { version = "0.7.18", features = ["io"] }
url = "2.5.8"
uuid = { version = "1.22.0", features = ["v4"] }

# Optimize for smallest possible binary size
[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
strip = true
panic = "abort"
