[package]
name = "miasma"
description = "Trap malicious AI web scrapers in an endless pit of poisoned training data."
version = "0.1.15"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/austin-weeks/miasma"
readme = "README.md"
exclude = [".github"]

[dependencies]
anyhow = "1.0.102"
async-compression = { version = "0.4.41", features = ["gzip"] }
async-stream = "0.3.6"
axum = "0.8.8"
bytes = "1.11.1"
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
futures = "0.3.32"
reqwest = { version = "0.13.2", features = ["gzip", "json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version="1.50.0", features= ["full"] }
tokio-util = { version = "0.7.18", features = ["io"] }
url = "2.5.8"
uuid = { version = "1.22.0", features = ["v4"] }

# Optimize for smallest possible binary size
[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
strip = true
panic = "abort"
